Compilation/output.txt
/home/anshul/SC200/Fileparser/Hello/HelloWorld.java:7: error: package system does not exist
       system.out.println("Hey Hello World");
             ^
1 error
